# driving_platform

./: CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md  cppcheck.txt  h  main.c
app/: CMakeLists.txt  config.h  main.c  main.h
bsp/: CMakeLists.txt  HW_api.c  HW_api.h  rtos.c  rtos.h
bsp/components/: CMakeLists.txt  DINs.c  DINs.h  DOUTs.c  DOUTs.h  Digital_IOs.c  Digital_IOs.h  MCP23017.c  MCP23017.h
bsp/components/gpios/: Digital_IOs.h  MCP23017.c
cmake/: arm-none-eabi-gcc.cmake
lib/: CMakeLists.txt
lib/Cube/: .mxproject  CMakeLists.txt  Makefile  bsp.ioc  startup_stm32f446xx.s
lib/Cube/Core/Inc/: gpio.h  stm32f4xx_hal_conf.h
lib/Cube/Core/Src/: freertos.c  gpio.c  i2c.c  sdio.c  spi.c  stm32f4xx_it.c
lib/ring_buffer/: ring_buffer.c  ring_buffer.h
